syntax = "proto3";
package io.partdb.server.raft;

option java_package = "io.partdb.server.raft.proto";
option java_outer_classname = "RaftProto";

service RaftService {
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc PreVote(PreVoteRequest) returns (PreVoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc InstallSnapshot(stream InstallSnapshotRequest) returns (InstallSnapshotResponse);
  rpc ReadIndex(ReadIndexRequest) returns (ReadIndexResponse);
}

message RequestVoteRequest {
  int64 term = 1;
  string candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message RequestVoteResponse {
  int64 term = 1;
  bool vote_granted = 2;
}

message PreVoteRequest {
  int64 term = 1;
  string candidate_id = 2;
  int64 last_log_index = 3;
  int64 last_log_term = 4;
}

message PreVoteResponse {
  int64 term = 1;
  bool vote_granted = 2;
}

message AppendEntriesRequest {
  int64 term = 1;
  string leader_id = 2;
  int64 prev_log_index = 3;
  int64 prev_log_term = 4;
  repeated LogEntry entries = 5;
  int64 leader_commit = 6;
}

message AppendEntriesResponse {
  int64 term = 1;
  bool success = 2;
  int64 match_index = 3;
}

message LogEntry {
  int64 index = 1;
  int64 term = 2;
  oneof entry {
    bytes data = 3;
    bool no_op = 4;
    Membership config = 5;
  }
}

message Membership {
  repeated string voters = 1;
  repeated string learners = 2;
}

message InstallSnapshotRequest {
  oneof payload {
    SnapshotHeader header = 1;
    SnapshotChunk chunk = 2;
  }
}

message SnapshotHeader {
  int64 term = 1;
  string leader_id = 2;
  int64 last_included_index = 3;
  int64 last_included_term = 4;
  Membership membership = 5;
  int64 total_size = 6;
}

message SnapshotChunk {
  bytes data = 1;
  bool done = 2;
}

message InstallSnapshotResponse {
  int64 term = 1;
}

message ReadIndexRequest {
  int64 term = 1;
  bytes context = 2;
}

message ReadIndexResponse {
  int64 term = 1;
  int64 read_index = 2;
  bytes context = 3;
}
